--- a/README.org
+++ b/README.org
@@ -1,3 +1,3 @@
-* Running csta-ws server
+* Running dmcc-ws server
 
-  See example configuration file at csta-ws/example.cfg
+  See example configuration file at dmcc-ws/example.cfg
